--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "php": ">=5.6"
     },
     "require-dev": {
+        "php": ">=7.0",
         "phpunit/phpunit": "^5.0",
         "satooshi/php-coveralls": "^1.0",
         "squizlabs/php_codesniffer": "^2.8"
